--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel=”preconnect” href=”https://fonts.googleapis.com”>
+<link rel=”preconnect” href=”https://fonts.gstatic.com” crossorigin>
+<link href=”https://fonts.googleapis.com/
+css2?family=Inter:wght@700&family=Poppins:wght@400;700&display=swap”
+rel=”stylesheet”>
 </head>
 <body>
     <header class=”cabecalho”>
@@ -16,5 +21,42 @@
         <li class=”cabecalho-lista-item”>Escola</li>
       </ul>
     </header>
+    <section class=”escola”>
+        <div class=”escola-conteudo”>
+        <h2 class=”escola-titulo”>Sobre a Escola</h2>
+        <p class=”escola-texto-um”>A escola Alura foi fundada em 2010 com o objetivo de
+            ensinar
+            Pensamento Computacional através da Programação. </p>
+            <p class=”escola-texto-dois”>A turma mais famosa é a Segunda Série A. Uma turma
+            diversa
+            
+            e engajada, as vezes, um pouco bagunceira, mas
+            
+            que entrega excelentes resultados!</p>
+        </div>
+        </section>
 </body>
 </html>
+<img src=”./img/Formula-bro.png” alt =”professora no quadro”>
+<img class=”escola-imagem”src=
+
+.escola-imagem {
+    width:25%;
+    }
+
+    .escola {
+        background-image: linear-gradient(#383D58,#00c0eb);
+        color: white;
+        display:flex;
+   justify-content: center;
+   align-items: center;
+   padding: 24px 0;
+        }
+
+        .escola-conteudo{
+            width: 35%;
+            }
+
+            .escola-titulo {
+                padding: 24px 0;
+                }
