--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@ rel=”stylesheet”>
             que entrega excelentes resultados!</p>
         </div>
         </section>
+        <section class=”estudante”>
+            <h2 class=”estudante-titulo”>Quem são nossos estudantes?</h2>
+            <div class=”estudante-div”>
+            <img class=”estudante-imagem “src=”./img/Marcelo
+            1.png” alt=”foto do estudante Marcelo”>
+            <h3 class=”estudante-nome”>Marcelo</h3>
+            <img class=”estudante-icone”src=”./img/instagram.png” alt=”Instagram”>
+            <img class=”estudante-icone”src=”./img/github.png” alt=”Github”>
+            <img class=”estudante-icone” src=”./img/linkedin.png” alt=”LinkedIn”>
+        </div>
+        </section>
 </body>
 </html>
 <img src=”./img/Formula-bro.png” alt =”professora no quadro”>
