--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@ rel=”stylesheet”>
         </section>
         <section class=”estudante”>
             <h2 class=”estudante-titulo”>Quem são nossos estudantes?</h2>
-            <div class=”estudante-div”>
+            <div> class="<estudante-todos></div>
+            <div class=”estudante-div”></div>
             <img class=”estudante-imagem “src=”./img/Marcelo
             1.png” alt=”foto do estudante Marcelo”>
             <h3 class=”estudante-nome”>Marcelo</h3>
