--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@ rel=”stylesheet”>
         </section>
         <section class=”estudante”>
             <h2 class=”estudante-titulo”>Quem são nossos estudantes?</h2>
-            <div> class="<estudante-todos></div>
-            <div class=”estudante-div”></div>
+            <div class="estudante-todos">
+            <span></span>
+            <div class=”estudante-div”>
             <img class=”estudante-imagem “src=”./img/Marcelo
             1.png” alt=”foto do estudante Marcelo”>
             <h3 class=”estudante-nome”>Marcelo</h3>
@@ -46,6 +47,7 @@ rel=”stylesheet”>
             <img class=”estudante-icone”src=”./img/github.png” alt=”Github”>
             <img class=”estudante-icone” src=”./img/linkedin.png” alt=”LinkedIn”>
         </div>
+    </div>
         </section>
 </body>
 </html>
